messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service
spec:
  type: ClusterIP
  selector:
    app: messaging-app
  ports:
    - port: 8080
      targetPort: 8080
